--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,13 @@
   <parent>
     <groupId>io.fabric8.funktion</groupId>
     <artifactId>funktion-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.2</version>
     <relativePath>parent/pom.xml</relativePath>
   </parent>
 
   <groupId>io.fabric8.funktion</groupId>
   <artifactId>funktion-project</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.2</version>
   <packaging>pom</packaging>
 
   <name>Funktion</name>
