--- a/starter-parent-java/starter-parent-groovy/pom.xml
+++ b/starter-parent-java/starter-parent-groovy/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>io.fabric8.funktion.starter</groupId>
     <artifactId>starter-parent-java</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.8</version>
   </parent>
 
   <artifactId>starter-parent-groovy</artifactId>
