--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -20,7 +20,7 @@
 
   <groupId>io.fabric8.funktion</groupId>
   <artifactId>funktion-parent</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.13</version>
   <packaging>pom</packaging>
 
   <name>Funktion Parent</name>
