--- a/examples/example-java/pom.xml
+++ b/examples/example-java/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>io.fabric8.funktion.examples</groupId>
     <artifactId>examples</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.15</version>
   </parent>
 
   <artifactId>example-java</artifactId>
