--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,13 @@
   <parent>
     <groupId>io.fabric8.funktion</groupId>
     <artifactId>funktion-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.25</version>
     <relativePath>parent/pom.xml</relativePath>
   </parent>
 
   <groupId>io.fabric8.funktion</groupId>
   <artifactId>funktion-project</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.25</version>
   <packaging>pom</packaging>
 
   <name>Funktion</name>
@@ -165,12 +165,12 @@
       <dependency>
         <groupId>io.fabric8.funktion</groupId>
         <artifactId>funktion-model</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.25</version>
       </dependency>
       <dependency>
         <groupId>io.fabric8.funktion</groupId>
         <artifactId>funktion-runtime</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.25</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
