--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>io.fabric8.funktion</groupId>
   <artifactId>funktion-parent</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.30</version>
   <packaging>pom</packaging>
 
   <name>Funktion Parent</name>
