Funktion should allow Spring Boot health check to work, and use servlet component

--- a/funktion-runtime/src/main/resources/application.properties
+++ b/funktion-runtime/src/main/resources/application.properties
@@ -18,9 +18,9 @@
 spring.main.sources=io.fabric8.funktion.runtime
 
 # the options from org.apache.camel.spring.boot.CamelConfigurationProperties can be configured here
-camel.springboot.name=MyCamel
+camel.springboot.name=MyFunktion
 
 server.address=0.0.0.0
-server.port=8081
+server.port=8080
 
 logging.config=classpath:logback.xml
