--- a/funktion-runtime/pom.xml
+++ b/funktion-runtime/pom.xml
@@ -51,7 +51,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-jetty</artifactId>
+      <artifactId>camel-servlet</artifactId>
     </dependency>
 
     <!-- spring-boot -->
