Allow to turn on tracing from the funktion rule

--- a/funktion-runtime/src/main/resources/application.properties
+++ b/funktion-runtime/src/main/resources/application.properties
@@ -17,10 +17,7 @@
 
 spring.main.sources=io.fabric8.funktion.runtime
 
-# the options from org.apache.camel.spring.boot.CamelConfigurationProperties can be configured here
-camel.springboot.name=MyFunktion
-
-server.address=0.0.0.0
-server.port=8080
-
 logging.config=classpath:logback.xml
+
+# the options from org.apache.camel.spring.boot.CamelConfigurationProperties can be configured here
+camel.springboot.name=Funktion
