--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -71,10 +71,11 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
 
-    <fabric8.version>2.2.168</fabric8.version>
+    <assertj.version>2.4.1</assertj.version>
+    <fabric8.version>2.2.169</fabric8.version>
     <rest-assured.version>3.0.0</rest-assured.version>
-    <spring-boot.version>1.3.7.RELEASE</spring-boot.version>
-    <spring-boot-plugin.version>1.3.7.RELEASE</spring-boot-plugin.version>
+    <spring-boot.version>1.4.1.RELEASE</spring-boot.version>
+    <spring-boot-plugin.version>1.4.1.RELEASE</spring-boot-plugin.version>
 
     <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
     <maven.enforcer.plugin.version>1.4</maven.enforcer.plugin.version>
