--- a/examples/example-kotlin/pom.xml
+++ b/examples/example-kotlin/pom.xml
@@ -20,16 +20,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>io.fabric8.funktion.starter</groupId>
-    <artifactId>starter-parent</artifactId>
+    <groupId>io.fabric8.funktion.examples</groupId>
+    <artifactId>examples</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>starter-parent-kotlin</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>example-kotlin</artifactId>
+  <packaging>jar</packaging>
 
-  <name>Funktion Starter Parent Kotlin</name>
-  <description>Funktion :: Starter Parent :: Kotlin</description>
+  <name>Example Kotlin</name>
+  <description>Funktion :: Examples :: Kotlin</description>
 
   <properties>
     <kotlin.version>1.0.4</kotlin.version>
@@ -37,9 +37,20 @@
 
   <dependencies>
     <dependency>
+      <groupId>io.fabric8.funktion</groupId>
+      <artifactId>funktion-runtime</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib</artifactId>
       <version>${kotlin.version}</version>
+    </dependency>
+
+    <!-- testing -->
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -48,6 +59,7 @@
     <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
     <plugins>
+
       <plugin>
         <artifactId>kotlin-maven-plugin</artifactId>
         <groupId>org.jetbrains.kotlin</groupId>
@@ -69,7 +81,48 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>fabric8-maven-plugin</artifactId>
+      </plugin>
+
     </plugins>
   </build>
 
+  <profiles>
+    <profile>
+      <id>k8s</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>fabric8-maven-plugin</artifactId>
+            <configuration>
+              <enricher>
+                <config>
+                  <fmp-service>
+                    <type>LoadBalancer</type>
+                  </fmp-service>
+                </config>
+              </enricher>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>resource</goal>
+                  <goal>build</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
