#144: Fixes Using two trigger:http in same example fails.

--- a/examples/example-java/src/main/resources/funktion.yml
+++ b/examples/example-java/src/main/resources/funktion.yml
@@ -1,5 +1,9 @@
 rules:
   - trigger: http
-    name: thingy
+    name: cheese
     action: io.fabric8.funktion.example.Main::cheese
+    trace: true
+  - trigger: http://bar
+    name: wine
+    action: io.fabric8.funktion.example.Main::wine
     trace: true
