Use ServiceLoader to discover step handlers for easier extension

--- a/funktion-model/pom.xml
+++ b/funktion-model/pom.xml
@@ -68,6 +68,12 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.auto.service</groupId>
+      <artifactId>auto-service</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
