--- a/examples/example-groovy/pom.xml
+++ b/examples/example-groovy/pom.xml
@@ -62,6 +62,15 @@
       <plugin>
         <groupId>io.fabric8</groupId>
         <artifactId>fabric8-maven-plugin</artifactId>
+        <configuration>
+         <enricher>
+            <config>
+              <fmp-service>
+                <port>80</port>
+              </fmp-service>
+            </config>
+          </enricher>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.gmavenplus</groupId>
@@ -97,6 +106,7 @@
               <enricher>
                 <config>
                   <fmp-service>
+                    <port>80</port>
                     <type>LoadBalancer</type>
                   </fmp-service>
                 </config>
