--- a/examples/example-java/pom.xml
+++ b/examples/example-java/pom.xml
@@ -72,6 +72,15 @@
       <plugin>
         <groupId>io.fabric8</groupId>
         <artifactId>fabric8-maven-plugin</artifactId>
+        <configuration>
+         <enricher>
+            <config>
+              <fmp-service>
+                <port>80</port>
+              </fmp-service>
+            </config>
+          </enricher>
+        </configuration>
       </plugin>
 
     </plugins>
@@ -89,6 +98,7 @@
               <enricher>
                 <config>
                   <fmp-service>
+                   <port>80</port>
                    <type>LoadBalancer</type>
                   </fmp-service>
                 </config>
