--- a/examples/example-kotlin/pom.xml
+++ b/examples/example-kotlin/pom.xml
@@ -90,8 +90,16 @@
       <plugin>
         <groupId>io.fabric8</groupId>
         <artifactId>fabric8-maven-plugin</artifactId>
+        <configuration>
+         <enricher>
+            <config>
+              <fmp-service>
+                <port>80</port>
+              </fmp-service>
+            </config>
+          </enricher>
+        </configuration>
       </plugin>
-
     </plugins>
   </build>
 
@@ -107,6 +115,7 @@
               <enricher>
                 <config>
                   <fmp-service>
+                    <port>80</port>
                     <type>LoadBalancer</type>
                   </fmp-service>
                 </config>
